@@ -1,5 +1,8 @@
 [b]Version 0.6.2[/b]:
 
+(2008-08-07)
+ * Added a time display to the floating control in the minigui.
+
 (2008-08-06)
  * The find subtitles dialog is now a top level window, instead of a dialog.
  * Play the last item in the playlist if the "play previous" button is
